--- a/DragonWar.MatchServer/DragonWar.MatchServer.csproj
+++ b/DragonWar.MatchServer/DragonWar.MatchServer.csproj
@@ -41,11 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Match.cs" />
+    <Compile Include="MatchManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DragonWar.Lib\DragonWar.Lib.csproj">
+      <Project>{1caa880b-8467-43e9-a700-95736c1e0ff9}</Project>
+      <Name>DragonWar.Lib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
