--- a/DragonWar.Lib/DragonWar.Lib.csproj
+++ b/DragonWar.Lib/DragonWar.Lib.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data">
+      <HintPath>..\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,6 +44,8 @@
   <ItemGroup>
     <Compile Include="Cryptography\base64.cs" />
     <Compile Include="Cryptography\Blowfish.cs" />
+    <Compile Include="Cryptography\CryptoDirection.cs" />
+    <Compile Include="Cryptography\ICryptoProvider.cs" />
     <Compile Include="Cryptography\MD5.cs" />
     <Compile Include="Database\Database.cs" />
     <Compile Include="Database\DatabaseClient.cs" />
@@ -71,17 +76,34 @@
     <Compile Include="Module\ConsoleThread.cs" />
     <Compile Include="Module\EngineWorker.cs" />
     <Compile Include="Module\ServerMainBase.cs" />
+    <Compile Include="Network\Connection.cs" />
+    <Compile Include="Network\ConnectionListener.cs" />
+    <Compile Include="Network\DisconnectedEventArgs.cs" />
+    <Compile Include="Network\NewConnectionEventArgs.cs" />
+    <Compile Include="Network\PacketReceivedEventArgs.cs" />
+    <Compile Include="Network\PacketSentEventArgs.cs" />
+    <Compile Include="Network\TcpConnectionListener.cs" />
     <Compile Include="Object\Account.cs" />
     <Compile Include="Object\Version.cs" />
+    <Compile Include="Packet\DragonWarPacketReader.cs" />
+    <Compile Include="Packet\IPacketStructure.cs" />
+    <Compile Include="Packet\PacketReader.cs" />
+    <Compile Include="Packet\PacketWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\ByteUtils.cs" />
     <Compile Include="Util\ConsoleCommandAttribute.cs" />
     <Compile Include="Util\Extensions\ConcurrentExtensions.cs" />
     <Compile Include="Util\Extensions\StringExtensions.cs" />
+    <Compile Include="Util\MultiArrayBuffer.cs" />
     <Compile Include="Util\PacketHandlerAttribute.cs" />
     <Compile Include="Util\Pair.cs" />
     <Compile Include="Util\Reflector.cs" />
+    <Compile Include="Util\SecureCollection.cs" />
+    <Compile Include="Util\SecureWriteCollection.cs" />
     <Compile Include="Util\ServerModuleAttribute.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
