--- a/DragonWar.Game/DragonWar.Game.csproj
+++ b/DragonWar.Game/DragonWar.Game.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Accounts\Account.cs" />
     <Compile Include="Accounts\Account_Details.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server\ServerState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
