--- a/DragonWar.Networking/DragonWar.Networking.csproj
+++ b/DragonWar.Networking/DragonWar.Networking.csproj
@@ -41,10 +41,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attribute\LobbyHandlerAttribute.cs" />
     <Compile Include="Attribute\ServiceHandlerAttribute.cs" />
-    <Compile Include="HandlerTypes\AccountHandlerTypes.cs" />
-    <Compile Include="HandlerTypes\HeaderTypes.cs" />
-    <Compile Include="HandlerTypes\IHandlerType.cs" />
+    <Compile Include="Packet\Lobby\Server\ServerStatusPacket.cs" />
+    <Compile Include="Packet\Lobby\Types\AccountTypes.cs" />
+    <Compile Include="Packet\Lobby\Types\ProtocolTypes.cs" />
+    <Compile Include="Packet\Lobby\LobbyHeaderTypes.cs" />
+    <Compile Include="Packet\Lobby\Protocol\LobbyHandShake.cs" />
+    <Compile Include="Packet\Lobby\Types\ServerStatusTypes.cs" />
+    <Compile Include="Packet\Proccessing\LobbyProcessingInfo.cs" />
+    <Compile Include="Packet\Proccessing\LobbyProcessingQueue.cs" />
+    <Compile Include="Packet\Service\Authentication\Auth_ACK.cs" />
+    <Compile Include="Packet\Service\Ser viceHeaderTypes.cs" />
+    <Compile Include="Packet\Lobby\LobbyPacket.cs" />
+    <Compile Include="Packet\PacketExtension.cs" />
+    <Compile Include="Packet\Service\ServicePacket.cs" />
+    <Compile Include="Packet\Service\Types\ConnectionTypes.cs" />
+    <Compile Include="Store\LobbyHandlerStore.cs" />
     <Compile Include="Store\ServiceHandlerStore.cs" />
     <Compile Include="NetworkReflector.cs" />
     <Compile Include="Network\GameSessionBase.cs" />
@@ -54,7 +67,6 @@
     <Compile Include="Network\SessionBase.cs" />
     <Compile Include="Network\SessionEventArgs.cs" />
     <Compile Include="Packet\BinaryPacket.cs" />
-    <Compile Include="Packet\IServicePacket.cs" />
     <Compile Include="Packet\Proccessing\DataProcessingInfo.cs" />
     <Compile Include="Packet\Proccessing\DataProcessingQueue.cs" />
     <Compile Include="Packet\Proccessing\ServiceDataProccessingInfo.cs" />
@@ -71,6 +83,8 @@
       <Name>DragonWar.Utils</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Packet\Lobby\Authentication\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
