--- a/DragonWar.Game/DragonWar.Game.csproj
+++ b/DragonWar.Game/DragonWar.Game.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Accounts\Account.cs" />
     <Compile Include="Accounts\Account_Details.cs" />
+    <Compile Include="Player\PlayerBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\ServerState.cs" />
   </ItemGroup>
