--- a/DragonWar.LobbyClient/DragonWar.LobbyClient.csproj
+++ b/DragonWar.LobbyClient/DragonWar.LobbyClient.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Enum\ModuleInitializationStage.cs" />
     <Compile Include="GameClient.cs" />
     <Compile Include="Game\LobbyPlayer.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="GUI\Controls\LoginPanel.xaml.cs">
       <DependentUpon>LoginPanel.xaml</DependentUpon>
     </Compile>
