--- a/DragonWar.Service/DragonWar.Service.csproj
+++ b/DragonWar.Service/DragonWar.Service.csproj
@@ -45,10 +45,14 @@
     <Compile Include="Config\ServiceConfiguration.cs" />
     <Compile Include="Config\ServiceDatabaseSection.cs" />
     <Compile Include="Core\ServerMain.cs" />
+    <Compile Include="InternNetwork\Handlers\ProtocolHandler.cs" />
+    <Compile Include="InternNetwork\MatchServerManager.cs" />
     <Compile Include="Network\LobbyServer.cs" />
     <Compile Include="Network\LobbySession.cs" />
-    <Compile Include="Network\ServiceServer.cs" />
-    <Compile Include="Network\ServiceSession.cs" />
+    <Compile Include="Network\LobbySessionManager.cs" />
+    <Compile Include="InternNetwork\ServiceServer.cs" />
+    <Compile Include="InternNetwork\ServiceSession.cs" />
+    <Compile Include="InternNetwork\ServiceSessionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerConsole\Title\ServiceTitle.cs" />
   </ItemGroup>
@@ -71,6 +75,9 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Network\Handlers\Client\Server\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
